# Nova-Inventory

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
agent/: AGENT.md
app/: main.py
app/api/v1/: analytics.py  deps.py  items.py  orders.py  router.py  stock.py
app/core/: cache.py  config.py  constants.py  exceptions.py  logging.py
app/db/: base.py  session.py
app/domain/: enums.py
app/domain/models/: __init__.py  item.py  order.py  stock_movement.py
app/middleware/: __init__.py  auth.py
app/repositories/: item_repo.py  order_repo.py  stock_repo.py
app/schemas/: analytics.py  item.py  order.py  stock.py
app/services/: __init__.py  analytics_service.py  item_service.py  order_service.py  stock_service.py
docs/: openapi.json  postman_collection.json
docs/plans/: 2026-02-26-inventory-stock-service-design.md  2026-02-26-inventory-stock-service.md  2026-03-03-nova-extended-requirements.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: check_copyright.py  generate_postman.py  seed.py
tests/: TEST_CASES.md  conftest.py
tests/e2e/: test_edge_cases.py
tests/integration/: test_analytics.py  test_concurrent_orders.py  test_order_lifecycle.py  test_stock_alerts.py
tests/unit/: test_auth_middleware.py  test_cache.py  test_config.py  test_constants.py  test_enums.py  test_exceptions.py  test_models.py  test_order_state_machine.py  test_schemas.py
